--- a/app/static/index.html
+++ b/app/static/index.html
@@ -45,18 +45,24 @@
 </textarea>
             </div>
         </div>
-        <script src="../../bower_components/jquery/dist/jquery.js"  onload="$ = jQuery = module.exports;"></script>
-        <script src="../../bower_components/editor.md/editormd.js"> </script>
+        <!--<script src="../../bower_components/jquery/dist/jquery.js"  onload="$ = jQuery = module.exports;"></script>
+        <script src="../../bower_components/editor.md/editormd.js"> </script>-->
         <script type="text/javascript">
 
-            var test = require("editor.md/editormd.js")
+            $ = jQuery = require("jquery/dist/jquery.js");
+
+            var editormd = require("editor.md/editormd.js")()
+
+            const electronScreen = require('electron').screen
+
+            const size = electronScreen.getPrimaryDisplay().size
             
 			var testEditor;
 
             $(function() {
                 testEditor = editormd("test-editormd", {
                     width   : "100%",
-                    height  : "100%",
+                    height  : "${size.width}",
                     syncScrolling : "single",
                     path    : "../../bower_components/editor.md/lib/",
                     theme : "dark",
