--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>CoWriter</title>
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="stylesheet" href="../../bower_components/editor.md/css/editormd.css" />
+        <link rel="stylesheet" href="../../node_modules/editor.md/css/editormd.css" />
         <link rel="shortcut icon" href="https://pandao.github.io/editor.md/favicon.ico" type="image/x-icon" />
     </head>
     <body>
@@ -45,8 +45,7 @@
 </textarea>
             </div>
         </div>
-        <!--<script src="../../bower_components/jquery/dist/jquery.js"  onload="$ = jQuery = module.exports;"></script>
-        <script src="../../bower_components/editor.md/editormd.js"> </script>-->
+        
         <script type="text/javascript">
 
             $ = jQuery = require("jquery/dist/jquery.js");
@@ -64,7 +63,7 @@
                     width   : "100%",
                     height  : "${size.width}",
                     syncScrolling : "single",
-                    path    : "../../bower_components/editor.md/lib/",
+                    path    : "../../node_modules/editor.md/lib/",
                     theme : "dark",
                     previewTheme : "dark",    
                     editorTheme : "pastel-on-dark",
@@ -82,4 +81,8 @@
             });
         </script>
     </body>
+
+    <footer id="page_footer">
+        <p>&copy; 2010 AwesomeCo.</p>
+    </footer>
 </html>
